# yagl

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  TODO  run.sh  tmux.sh
include/glad/: gl.h
include/glad/glad/: gl.h
shaders/: border.frag.glsl  border.vert.glsl  rect.frag.glsl  rect.vert.glsl  text.frag.glsl  text.vert.glsl  texture.frag.glsl  texture.vert.glsl
src/: clay.cpp  clay.hpp  gltypes.hpp  logger.cpp  logger.hpp  main.cpp  math.hpp  meta.hpp  rect.cpp  rect.hpp
src/graphics/: gltypes.hpp  shader.cpp  shader.hpp  shader_list.cpp  shader_list.hpp  texture.hpp
src/graphics/list/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/graphics/systems/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/phc/: phc.hpp
src/render/: clay.cpp  clay.hpp
src/systems/: audio.cpp  audio.hpp  key.cpp  key.hpp  logger.cpp  logger.hpp  mouse.cpp  mouse.hpp  text.cpp  text.hpp  window.cpp  window.hpp
src/systems/list/: audio.cpp  audio.hpp
